$Id: CHANGES,v 1.242 2004/03/01 15:38:10 stelian Exp $

Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
=======================================================================

1.	Fixed dump compilation with old gcc versions. Thanks to
	Mike Castle <dalgoda@users.sourceforge.net> for the patch.

2.	Fixed some warnings (howmany, roundup, powerof2 redefined)
	when compiling against a recent glibc version.

3.	Fixed a bug in restore preventing the read of a dump tape
	written with Solaris 7 ufsdump. Thanks to Patrick Higgins
	<phiggins@transzap.com> for reporting the bug and providing 
	the test case.

4.	Changed dump to enable the creation of volumes of different
	sizes in a single run (make -B accept a list of values).
	Patch contributed by Florian Zumbiehl <florz@gmx.de>.

5.	Use the glibc provided minor() and major() macros instead
	of our own bitmask implementation. This should be safe for
	when the major/minor namespace will migrate to 32 bits.
	Thanks to Zhang Jun <zhangjun@nanjing-fnst.com> for reporting
	the bug.

6.	Made explicit in the dump man page that dump will not create
	a remote file, it will only write to an already existing one.

7.	Another try at making size estimates better again.

Changes between versions 0.4b34 and 0.4b35 (released December 21, 2003)
=======================================================================

1.	Added a note in the dump man page saying that the default
	blocksize can be 32 if -d is used with a high density argument.
	Thanks to Antonios Christofides <A.Christofides@itia.ntua.gr>
	for the patch.

2.	Fixed configure to correctly understand CPPFLAGS, CFLAGS,
	LDFLAGS environment variables. Thanks to Arcady Genkin
	<antipode@users.sourceforge.net> for reporting the bug.

3.	Made -e/-E options of dump accept an unlimited number of inodes
	to be excluded, rather than a hardcoded maximum. Thanks to 
	Dietrich Rothe <d-rothe@users.sourceforge.net> for the patch.
