@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.242 2004/03/01 15:38:10 stelian Exp $
+$Id: CHANGES,v 1.243 2004/03/08 14:04:02 stelian Exp $
 
 Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
 =======================================================================
@@ -28,6 +28,11 @@ Changes between versions 0.4b35 and 0.4b36 (released ?????????????????)
 	a remote file, it will only write to an already existing one.
 
 7.	Another try at making size estimates better again.
+
+8.	Put back the inconditional running of the end-of-tape
+	script which was changed in 0.434 to be run only when -M
+	or multiple -f were NOT specified. Some users rely on this
+	feature even when it is combined with -M/-f.
 
 Changes between versions 0.4b34 and 0.4b35 (released December 21, 2003)
 =======================================================================
